# talks

./: README.md
2017-11-21-cppfrug-20-paris-jenkins-pipelines/: example-output.groovy  example1.groovy  example2.groovy  example3.groovy  example4.groovy
2024-10-28-meetup-paris-embedded-c++-meta-programming-embedded/code/: CMakeLists.txt  classic++.cpp  gpio_banks.h  io_basic.h  start.cpp  step-1.cpp  step-2.cpp  step-3.cpp  step-4.cpp
2024-10-28-meetup-paris-embedded-c++-meta-programming-embedded/code/c++/: final.cpp  gpio_bank.h  hardware_description_generated.h  io.h  product.h
